# AmbiRenderer

./: .gitignore  AmbiRenderer.sln  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
AmbiRenderer/: AmbiRenderer.vcxproj  AmbiRenderer.vcxproj.filters  run.cpp
AmbiRenderer/app/: TestApp.cpp  TestApp.h
AmbiRenderer/core/: ABR_GDI.cpp  ABR_GDI.h  AmbiRenderer.cpp  AppBase.cpp  AppBase.h  Config.h  Config.hpp  ControlManager.cpp  ControlManager.h  DesignPatterns.h  EngineCore.cpp  EngineCore.h  Macros.h  Renderer.h  Renderer.hpp  RendererBase.h  RendererManager.cpp  RendererManager.h  Systems.h  Timer.cpp  Timer.h  Utils.h  WinMain.cpp  WindowsRenderer.cpp  WindowsRenderer.h
AmbiRenderer/renderers/: Graphics.h  Rasterizer.cpp  Rasterizer.h
AmbiRenderer/renderers/painter/: Painter.cpp  Painter.h
AmbiRenderer/renderers/rasterizer/: Rasterizer.cpp  Rasterizer.h  gl_soft.h  model.cpp  model.h
AmbiRenderer/renderers/shaders/: TestVertexShader.h  VertexShaderBase.h  v_Test.h
Documents/Notes/Ray_Tracing_The_Next_Week/: README.md
Documents/Notes/tinyrenderer/: README.md
Rasterizer/: Rasterizer.vcxproj  Rasterizer.vcxproj.filters  output.tga
Rasterizer/core/: Rasterizer.cpp  Rasterizer.h  geometry.h  gl_soft.cpp  model.cpp  model.h
Rasterizer/core/include/: geometry.h  gl_soft.cpp  gl_soft.h  model.cpp  model.h  tgaimage.cpp  tgaimage.h
Rasterizer/core/source/: Rasterizer.cpp  StartUp.cpp
Rasterizer/shaders/: f_AO.cpp  f_Depth.cpp  f_Gouraud.cpp  f_Normal.cpp  f_Phong.cpp  f_Phong_WorldNormal.cpp  f_SSAO.cpp  f_Stylized.cpp  f_Zbuffer.cpp  v_Basic.cpp
RayTracer/: RayTracer.vcxproj  RayTracer.vcxproj.filters  result.ppm
RayTracer/core/include/: Camera.hpp  Color.hpp  Config.hpp  HittableList.hpp  Material.hpp  RayTracer.hpp  RayTracerConfig.hpp  SceneManager.hpp  Vec3.hpp
RayTracer/core/source/: AABB.hpp  AArect.cpp  AArect.hpp  BVH.cpp  BVH.hpp  Box.cpp  Box.hpp  Color.hpp  ConstantMedium.cpp  Hittable.cpp  Hittable.hpp  HittableList.cpp  Material.cpp  MovingShpere.cpp  Perlin.hpp  Ray.hpp  RayTracer.cpp  RayTracer.hpp  SceneManager.hpp  Scenes.cpp  Sphere.cpp  StartUp.cpp  Texture.cpp  Texture.hpp  rtw_stb_image.hpp
doc/: Chapter5_result.ppm
doc/Notes/Ray_Tracing_The_Next_Week/: README.md
doc/Notes/Ray_Tracing_in_One_Weekend/: README.md
src/: AmbiRenderer.cpp  AmbiRenderer.h  AmbiRenderer.hpp  CMakeLists.txt  Config.hpp  Renderer.hpp
src/ImGui/: CMakeLists.txt  Gui_core.cpp  Gui_core.hpp  Gui_main.cpp  dx12example_main.cpp
src/RayTracer/: CMakeLists.txt
src/RayTracer/include/: Color.hpp  Hittable.hpp  RTweekend.hpp  Ray.hpp  RayTracer.h  RayTracer.hpp  Sphere.hpp
src/RayTracer/src/: AABB.cpp  AABB.hpp  AArect.cpp  AArect.hpp  BVH.cpp  BVH.hpp  Camera.cpp  Camera.hpp  Color.hpp  ConstantMedium.hpp  Hittable.hpp  HittableList.cpp  HittableList.hpp  Material.cpp  Material.hpp  MovingShpere.cpp  MovingSphere.hpp  RTweekend.hpp  Ray.hpp  RayTracer.cpp  RayTracer.h  RayTracer.hpp  SceneManager.cpp  SceneManager.hpp  Scenes.cpp  Scenes.hpp  Sphere.cpp  Sphere.hpp  Texture.cpp  Texture.hpp  Vec3.hpp  rtw_stb_image.hpp
